[tool.poetry]
name = "cp-library"
version = "0.1.0"
description = ""
authors = ["kobejean"]
readme = "README.md"
packages = [{ include = "cp_library" }]

[tool.poetry.dependencies]
python = "^3.10"
online-judge-verify-helper = {git = "https://github.com/kobejean/verification-helper.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
